--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,6 @@ platform = espressif32
 framework = arduino
 board = esp32dev
 lib_deps = 
-  mathWorks/ThingSpeak@^2.1.1
-  beegee-tokyo/DHT sensor library for ESPx@^1.19
+ mathworks/ThingSpeak @ ^2.1.1
+  adafruit/DHT sensor library @ ^1.4.6
 src_filter = +<../q4/src/>
